maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:4: error: value update is not a member of Boolean
    if (estFaceMur()=false){
        ^