maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (estSurBiscuit()==false){
    if (estFaceMur()=false){
      avance()
      
    }else{
      gauche()
    }
    
  }
  prendBiscuit()
}